sasql/tests/compile_fail/truncate_rejected.rs
fn main() {
    let _ = sasql::query!("TRUNCATE users");
}
