sasql/tests/compile_fail/truncate_rejected.stderr
error: unsupported statement type: `truncate`. sasql supports SELECT, INSERT, UPDATE, DELETE
 --> tests/compile_fail/truncate_rejected.rs:2:13
  |
2 |     let _ = sasql::query!("TRUNCATE users");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sasql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
